--- a/src/components/landing/ui/YCard.module.scss
+++ b/src/components/landing/ui/YCard.module.scss
@@ -8,13 +8,28 @@
   box-shadow: 0 0px 8px 0px rgba(0, 0, 0, 0.1);
   background-color: white;
 
-  .title {
+  .titleSection {
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    .axis {
+      color: #969696;
+      font-size: 16px;
+      font-weight: 500;
+    }
+
+    .title {
+      color: black;
+      font-size: 20px;
+      font-weight: bold;
+    }
   }
 
   .content {
     text-align: center;
+    color: #969696;
+    font-size: 16px;
+    font-weight: 500;
   }
 }
