--- a/src/pages/landing/ui/Landing.module.scss
+++ b/src/pages/landing/ui/Landing.module.scss
@@ -21,9 +21,76 @@
     display: flex;
     flex-direction: column;
     gap: 49px;
+    width: 390px;
+
+    .title {
+      font-size: 36px;
+      font-weight: bold;
+
+      .color {
+        color: #e75959;
+      }
+    }
+
+    .description {
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+
+      .subTitle {
+        color: #4d4d4d;
+        font-size: 24px;
+        font-weight: bold;
+      }
+
+      .text {
+        color: #969696;
+        font-size: 16px;
+        font-weight: 500;
+      }
+    }
+
+    .imageButtonGroup {
+      display: flex;
+      gap: 12px;
+
+      .imageButton {
+        width: 46px;
+        height: 16px;
+        border-radius: 30px;
+        background-color: #f4f2ed;
+        border: none;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+
+        &.active {
+          background-color: #fc8e8e;
+        }
+      }
+    }
+
+    .analyzeButton {
+      padding: 10px;
+      background-color: #990e17;
+      border-radius: 8px;
+      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 360px;
+      height: 60px;
+      box-sizing: border-box;
+      font-size: 20px;
+      font-weight: bold;
+      cursor: pointer;
+    }
   }
 
   .rightSection {
+    .image {
+      border: 8px solid #f5f5f5;
+      border-radius: 12px;
+    }
   }
 }
 
@@ -40,6 +107,18 @@
     flex-direction: column;
     align-items: center;
     gap: 4px;
+
+    .title {
+      color: #131313;
+      font-size: 32px;
+      font-weight: bold;
+    }
+
+    .description {
+      color: #969696;
+      font-size: 20px;
+      font-weight: 500;
+    }
   }
 
   .content {
