--- a/src/pages/landing/ui/Landing.module.scss
+++ b/src/pages/landing/ui/Landing.module.scss
@@ -158,7 +158,21 @@
   gap: 88px;
 
   .titleSection {
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 4px;
+
+    .title {
+      color: #131313;
+      font-size: 32px;
+      font-weight: bold;
+    }
+    .description {
+      color: #969696;
+      font-size: 20px;
+      font-weight: 500;
+    }
   }
 
   .cardSection {
@@ -192,7 +206,22 @@
   gap: 60px;
 
   .titleSection {
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 4px;
+
+    .title {
+      color: #131313;
+      font-size: 32px;
+      font-weight: bold;
+    }
+
+    .description {
+      color: #969696;
+      font-size: 20px;
+      font-weight: 500;
+    }
   }
 
   .cardSection {
@@ -213,11 +242,26 @@
       border-radius: 12px;
       box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.1);
       box-sizing: border-box;
+      color: #969696;
+      font-size: 16px;
+      font-weight: 500;
     }
 
     .afterCard {
       border: 1px solid #e75959;
       box-shadow: 0px 0px 30px 0px #ffc8c8;
+      color: #4d4d4d;
+      font-size: 16px;
+      font-weight: 500;
+
+      .color {
+        color: #e75959;
+        font-weight: bold;
+      }
+
+      .size {
+        font-size: 20px;
+      }
     }
   }
 }
@@ -246,6 +290,12 @@
     margin-top: 256px;
     width: 100%;
 
+    .title {
+      color: #131313;
+      font-size: 32px;
+      font-weight: bold;
+    }
+
     .sampleReportButton {
       padding: 10px;
       border-radius: 4px;
@@ -257,6 +307,8 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      font-size: 20px;
+      font-weight: bold;
     }
   }
 
@@ -270,12 +322,15 @@
 
     .title {
       text-align: center;
+      color: #131313;
+      font-size: 32px;
+      font-weight: bold;
     }
 
     .partnershipLogos {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
-      gap: 20px;
+      gap: 100px;
     }
   }
 }
