--- a/src/pages/team/ui/Team.module.scss
+++ b/src/pages/team/ui/Team.module.scss
@@ -1,49 +1,126 @@
 .team {
-  width: 100%;
-  padding: 40px 60px;
-  box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  gap: 40px;
   align-items: center;
+  gap: 40px;
 }
 
-.title {
-  font-size: 1.5rem;
-  font-weight: bold;
-  color: #0e3270;
+.breadcrumb {
+  width: 858px;
+  display: flex;
+  gap: 4px;
+  color: #969696;
+  font-size: 16px;
+  font-weight: 400;
+  margin-top: 40px;
 }
 
-.members {
-  display: grid;
-  grid-template-columns: 1fr; /* 기본적으로 한 열로 시작 */
+.wrapper {
+  padding: 40px 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
+  max-width: 864px;
+
+  .title {
+    color: #990e17;
+    font-size: 36px;
+    font-weight: bold;
+  }
+
+  .subtitle {
+    color: #990e17;
+    font-size: 20px;
+    font-weight: bold;
+  }
+
+  .teamImage {
+    width: 100%;
+  }
+
+  .content {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 40px 24px;
+
+    .card {
+      display: flex;
+      align-items: center;
+      gap: 32px;
+
+      .description {
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+
+        .name {
+          color: #131313;
+          font-size: 20px;
+          font-weight: bold;
+        }
+
+        .info {
+          color: #969696;
+          font-size: 16px;
+          font-weight: 400;
+        }
+      }
+    }
+  }
+}
+
+.bottom {
+  background-color: #f4f2ed;
+  padding: 40px 0px 80px 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   gap: 40px;
   width: 100%;
-  max-width: 1280px;
-}
+  margin-top: 40px;
 
-.member {
-  background-color: red;
-  padding: 20px;
-  border-radius: 8px;
-  text-align: center;
-  font-size: 1.1rem;
-}
+  .content {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 860px;
 
-/* 1280px 이상에서는 첫 번째 줄에 교수님이 100% 차지 */
-@media (min-width: 1280px) {
-  .members {
-    grid-template-columns: 1fr 1fr; /* 두 개의 열 */
-  }
+    .title {
+      color: #969696;
+      font-size: 16px;
+      font-weight: bold;
+    }
 
-  .member:nth-child(1) {
-    grid-column: span 2; /* 첫 번째 항목(교수님)은 두 열을 차지 */
-  }
-}
+    .button {
+      width: 100%;
+      display: flex;
+      gap: 12px;
 
-/* 화면이 줄어들면 한 줄에 한 명씩 배치 */
-@media (max-width: 768px) {
-  .members {
-    grid-template-columns: 1fr; /* 모바일에서 한 열로 */
+      .card {
+        padding: 20px;
+        background-color: white;
+        border-radius: 8px;
+        width: 100%;
+        height: 120px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 4px;
+        cursor: pointer;
+
+        .title {
+          color: #4d4d4d;
+          font-size: 16px;
+          font-weight: 400;
+        }
+        .description {
+          color: #969696;
+          font-size: 14px;
+          font-weight: 400;
+        }
+      }
+    }
   }
 }
