--- a/src/pages/intro/ui/Intro.module.scss
+++ b/src/pages/intro/ui/Intro.module.scss
@@ -3,7 +3,16 @@
   flex-direction: column;
   align-items: center;
   gap: 80px;
-  padding-bottom: 160px;
+}
+
+.breadcrumb {
+  width: 858px;
+  display: flex;
+  gap: 4px;
+  color: #969696;
+  font-size: 16px;
+  font-weight: 400;
+  margin-top: 40px;
 }
 
 .wrapper {
@@ -13,7 +22,6 @@
   flex-direction: column;
   align-items: center;
   gap: 80px;
-  margin-top: 80px;
 }
 
 .titleSection {
@@ -24,7 +32,7 @@
 
   .title {
     color: #990e17;
-    font-size: 24px;
+    font-size: 36px;
     font-weight: bold;
   }
 
@@ -115,5 +123,60 @@
     flex-direction: column;
     align-items: center;
     gap: 10px;
+  }
+}
+
+.bottom {
+  background-color: #f4f2ed;
+  padding: 40px 0px 80px 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
+  width: 100%;
+  margin-top: 40px;
+
+  .content {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 860px;
+
+    .title {
+      color: #969696;
+      font-size: 16px;
+      font-weight: bold;
+    }
+
+    .button {
+      width: 100%;
+      display: flex;
+      gap: 12px;
+
+      .card {
+        padding: 20px;
+        background-color: white;
+        border-radius: 8px;
+        width: 100%;
+        height: 120px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 4px;
+        cursor: pointer;
+        box-sizing: border-box;
+
+        .title {
+          color: #4d4d4d;
+          font-size: 16px;
+          font-weight: 400;
+        }
+        .description {
+          color: #969696;
+          font-size: 14px;
+          font-weight: 400;
+        }
+      }
+    }
   }
 }
