--- a/src/pages/team/ui/Team.module.scss
+++ b/src/pages/team/ui/Team.module.scss
@@ -109,6 +109,7 @@
         justify-content: center;
         gap: 4px;
         cursor: pointer;
+        box-sizing: border-box;
 
         .title {
           color: #4d4d4d;
