--- a/src/pages/landing/ui/Landing.module.scss
+++ b/src/pages/landing/ui/Landing.module.scss
@@ -21,6 +21,7 @@
     display: flex;
     flex-direction: column;
     gap: 49px;
+    justify-content: center;
     width: 390px;
 
     .title {
@@ -87,9 +88,15 @@
   }
 
   .rightSection {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
     .image {
       border: 8px solid #f5f5f5;
       border-radius: 12px;
+      width: 740px;
+      box-sizing: border-box;
     }
   }
 }
@@ -144,7 +151,7 @@
     .zCard {
       position: absolute;
       top: 320px;
-      left: 100px;
+      left: 88px;
     }
   }
 }
@@ -179,20 +186,8 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 
-    .acceptedAnalysisCard {
-      width: 581px;
-    }
-
-    .strengthsCard {
-      width: 581px;
-    }
-
-    .strategyCard {
-      width: 581px;
-    }
-
-    .finalScoreCard {
-      width: 581px;
+    img {
+      width: 580px;
     }
   }
 }
@@ -326,11 +321,184 @@
       font-size: 32px;
       font-weight: bold;
     }
+  }
+}
 
-    .partnershipLogos {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 100px;
+@media (max-width: 1279px) {
+  .intro {
+    gap: 8px;
+
+    .rightSection {
+      .image {
+        width: 600px;
+      }
+    }
+  }
+
+  .improvement {
+    .cardSection {
+      img {
+        width: 500px;
+      }
+    }
+  }
+}
+
+@media (max-width: 1023px) {
+  .intro {
+    flex-direction: column;
+    gap: 30px;
+
+    .leftSection {
+      width: 100%;
+      align-items: center;
+      text-align: center;
+      img {
+        border: 8px solid #f5f5f5;
+        border-radius: 12px;
+      }
+    }
+  }
+
+  .improvement {
+    .cardSection {
+      grid-template-columns: repeat(1, 1fr);
+
+      img {
+        width: 640px;
+      }
+    }
+  }
+
+  .evaluation {
+    .content {
+      .xCard {
+        position: absolute;
+        top: -110px;
+      }
+      .yCard {
+        position: absolute;
+        top: 320px;
+        right: 0px;
+      }
+      .zCard {
+        position: absolute;
+        top: 320px;
+        left: 0px;
+      }
+    }
+  }
+}
+
+@media (max-width: 767px) {
+  .intro {
+    .leftSection {
+      padding: 0px 10px;
+      box-sizing: border-box;
+      .image {
+        width: 100%;
+      }
+      .analyzeButton {
+        width: 100%;
+      }
+    }
+  }
+
+  .evaluation {
+    text-align: center;
+    padding: 0px 10px;
+    box-sizing: border-box;
+    .content {
+      .xCard {
+        position: absolute;
+        top: -110px;
+      }
+      .yCard {
+        position: absolute;
+        top: 320px;
+        right: 0px;
+      }
+      .zCard {
+        position: absolute;
+        top: 320px;
+        left: 0px;
+      }
+    }
+  }
+
+  .evaluation {
+    gap: 60px;
+    .content {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+
+      .evaluationImage {
+        width: 100%;
+        position: static;
+      }
+
+      .xCard,
+      .yCard,
+      .zCard {
+        position: static;
+        width: 100%;
+        margin-top: 20px;
+      }
+    }
+  }
+
+  .improvement {
+    text-align: center;
+    padding: 0px 10px;
+    box-sizing: border-box;
+
+    .cardSection {
+      img {
+        width: 100%;
+      }
+    }
+  }
+
+  .resumeFeedback {
+    gap: 40px;
+    text-align: center;
+    padding: 0px 10px;
+    box-sizing: border-box;
+
+    .cardSection {
+      .beforeCard,
+      .afterCard {
+        height: 100%;
+        padding: 10px 20px;
+      }
+    }
+  }
+
+  .botton {
+    .sampleReport {
+      padding: 0px 10px;
+      box-sizing: border-box;
+
+      .sampleReportButton {
+        width: 100%;
+      }
+    }
+
+    .partnership {
+      margin-top: 382px;
+      margin-bottom: 432px;
+      display: flex;
+      flex-direction: column;
+      gap: 28px;
+      align-items: center;
+
+      .title {
+        text-align: center;
+        color: #131313;
+        font-size: 32px;
+        font-weight: bold;
+      }
     }
   }
 }
